--- a/c30-option2.html
+++ b/c30-option2.html
@@ -27,8 +27,7 @@
     <meta content="" name="keywords">
     <meta content="" name="description"><!-- Revealables -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.1/jqueryui/1.11.1/jquery-ui.js"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
     <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
     <script src="js/accordion.js"></script><!-- Accordion JS -->
@@ -229,7 +228,7 @@
 
                                     <p>You should take further action if the garage refuses to make the repairs and you can’t reach an agreement.</p>
 
-                                <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
+                                <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
                                 <a class="callout__link accordion-toggle-close">Close</a>
@@ -274,7 +273,7 @@
 
                                     <p>Take further action if they’re charging you for work that you didn’t ask for.</p>
 
-                                <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
+                                <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
                                 <a class="callout__link accordion-toggle-close">Close</a>
@@ -294,7 +293,7 @@
 
                                     <p>Take further action if they’re charging you for work that you didn’t ask for.</p>
 
-                                <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
+                                <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
                                 <a class="callout__link accordion-toggle-close">Close</a>
@@ -332,7 +331,7 @@
 
                                     <p>Take further action if you can’t agree on a reasonable date to finish the work, or if the work doesn’t get done by the new agreed date.</p>
 
-                                <div class="callout--turquoise"><a class="callout__link" href="#next-steps">Take further action if your negotiations have failed</a>
+                                <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
                                 <a class="callout__link accordion-toggle-close">Close</a>
