--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
 
-    <title>Proving Grounds</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0"
-    name="viewport">
+    <title>Testing</title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
     <meta content="EWS" name="cab-extent">
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
+
     <link href="css/main.css" media="screen" rel="stylesheet">
-    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media=
-    "print" rel="stylesheet">
-    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico"
-    rel="shortcut icon">
-    <link href=
-    "https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel=
-    "apple-touch-icon">
+    <link href="css/site.css" media="screen" rel="stylesheet">
+    <link href="css/accordion.css" rel="stylesheet"><!-- Accordion styles -->
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
+
+    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
+    <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
     <meta content="" name="keywords">
-    <meta content="" name="description">
-    <!-- Jquery for accordion script -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- Accordion script -->
-    <script src="js/beta-dap-accordion.js"></script>
+    <meta content="" name="description"><!-- Revealables -->
+
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
+    <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
+    <script src="js/accordion.js"></script><!-- Accordion JS -->
 </head>
 
 <body class="beta">
@@ -1243,299 +1245,21 @@
 
                 <div class="title">
                     <h1 class="title__heading js-ref"><span class=
-                    "title__title">Page titles</span></h1>
+                    "title__title">Design testing</span></h1>
                 </div>
                 <div class="articleContent">
                     <div>
-                        Input content here.
-                        <!--
-                        <p>Universal Credit is a new benefit that you can only
-                        get in some parts of the UK.</p>
-
-                        <p>If you’re living in a Universal Credit area, you
-                        might need to apply for Universal Credit instead of
-                        other existing benefits like Jobseeker's Allowance,
-                        Housing Benefit or Tax Credits etc.</p>
-
-                        <p>It’s mainly available to people who are unemployed
-                        or earn less than £338 a month - but you can get it in
-                        some other circumstances.</p>
-
-                        <h2 class="js-ref" id="h-get-help">Get help</h2>
-
-                        <p>It can be complicated to work out if you’re eligible
-                        just by reading all the small print - the rules are
-                        outlined in full below.</p>
-
-                        <p>It might be quicker and easier to talk to an expert
-                        so you can explain your personal circumstances. You can
-                        do this in a few ways:</p>
-
-                        <ul>
-                            <li>call the <strong>Universal Credit
-                            helpline</strong> on 0345 600 0723 (Textphone: 0345
-                            600 0743). Calls can cost 9p a minute from a
-                            landline, or between 8p and 40p a minute from a
-                            mobile (your phone supplier can tell you how much
-                            you’ll pay). You can call and ask them to call you
-                            back</li>
-
-                            <li>contact your <a href="">local Citizens
-                            Advice</a>
-                            </li>
-                        </ul>
-
-                        <h2 class="js-ref" id=
-                        "h-who-can-apply-for-universal-credit">Who can apply
-                        for Universal Credit</h2>
-
-                        <h3 class="js-ref" id=
-                        "h-you-can-currently-only-apply-in-a-universal-credit-area">
-                        You can currently only apply in a Universal Credit
-                        area</h3>
-
-                        <p>The first thing you should do is see if you live in
-                        a Universal Credit area. Follow these steps:</p>
-
-                        <ol>
-                            <li>
-                                <a href="">Find your nearest Jobcentre</a> if
-                                you don’t know it.
-                            </li>
-
-                            <li>Check the list of <a href="">Jobcentres that
-                            accept Universal Credit applications</a> to find
-                            out if your nearest Jobcentre is on the list. Some
-                            Jobcentres are only accepting claims from single
-                            people - the list will say where.
-                            </li>
-                        </ol>
-
-                        <p>If you can’t apply for Universal Credit, you should
-                        look at other benefits - use the Turn2us benefits
-                        checker to <a href="">see what you can apply for</a>.
-                        Your <a href="">local Citizens Advice</a> can also help
-                        you.</p>
-
-                        <h3 class="js-ref" id=
-                        "h-if-you-live-in-a-universal-credit-area">If you live
-                        in a Universal Credit area</h3>
-
-                        <p>To be eligible for Universal Credit, you must
-                        currently:</p>
-
-                        <ul>
-                            <li>expect to earn less than £338 (after tax) in
-                            the next month</li>
-
-                            <li>be between 18 years old and 60 years and 6
-                            months old</li>
-
-                            <li>be a British citizen (non-British citizens
-                            can&nbsp;<a href="">apply in some places</a>)
-                            </li>
-
-                            <li>have a National Insurance number</li>
-
-                            <li>have less than £6,000 in savings or other
-                            investments - eg shares, or property that you don't
-                            live in. This is increased to a £16,000 limit if
-                            you live in certain areas of Sutton or Croydon -
-                            see below</li>
-                        </ul>
-
-                        <p>If you live with your partner, you usually both need
-                        to be eligible. You'll need to:</p>
-
-                        <ul>
-                            <li>live at the same address (you don't have to be
-                            married or civil partners to apply)</li>
-
-                            <li>expect to earn less than £541 (after tax)
-                            combined in the next month</li>
-
-                            <li>have less than £6,000 in savings or other
-                            investments between you.&nbsp;This is increased to
-                            a £16,000 limit if you live in certain areas of
-                            Sutton or Croydon - see below</li>
-                        </ul>
-
-                        <p>There are currently very limited circumstances when
-                        you can apply as a single person while being part of a
-                        couple who is living together. You can read more in
-                        <a href="">the rules for how Universal Credit works for
-                        couples</a>.&nbsp;</p>
-
-                        <h3 class="js-ref" id=
-                        "h-the-following-conditions-will-also-apply-unless-you-live-in-sutton-or-croydon-">
-                        The following conditions will also apply (unless you
-                        live in Sutton or Croydon)</h3>
-
-                        <div class="box--warning dap-panel dap-panel--crucial">
-                            <p>There are fewer restrictions on applying if you
-                            live in parts of Sutton and Croydon. If you have a
-                            postcode beginning with SM5 2**, SM6 7**, SM6 8**,
-                            SM6 9** or CR0 4**, &nbsp;this section does not
-                            apply to you. If you live anywhere else in the UK,
-                            you'll need to meet the conditions below as well as
-                            the conditions already listed.&nbsp;</p>
+                        <h2>C22</h2>
+                        <div class="callout--turquoise">
+                            <a href="option1.html" class="callout__link">Option 1</a>
+                            <a href="option2.html" class="callout__link">Option 2</a>
+                            <a href="option3.html" class="callout__link">Option 3</a>
                         </div>
-
-                        <p>You must have lived in the UK for the last 2 years,
-                        and not have been abroad for more than 4 weeks
-                        continuously during that time.</p>
-
-                        <p>You <strong>can’t</strong> get Universal Credit if
-                        any of the following apply:</p>
-
-                        <ul>
-                            <li>you can't work or look for work (eg because of
-                            illness or disability)</li>
-
-                            <li>you’re in supported or temporary
-                            accommodation</li>
-
-                            <li>you’re a homeowner</li>
-
-                            <li>you’ve applied for a fitness for work note from
-                            a doctor</li>
-
-                            <li>you’re pregnant or have given birth within the
-                            last 15 weeks</li>
-
-                            <li>you have caring responsibilities, eg for a
-                            disabled person</li>
-
-                            <li>you’re self-employed, or expect to earn money
-                            from self-employment in the next month</li>
-
-                            <li>you’re a company director or part of a limited
-                            liability partnership</li>
-
-                            <li>you’re in education or on a training course of
-                            any kind</li>
-
-                            <li>you live in the same household as a member of
-                            the regular or reserve forces who’s away on
-                            duty</li>
-
-                            <li>you pay child maintenance via the Child Support
-                            Agency</li>
-
-                            <li>you’re an approved foster parent (even if you
-                            have no foster children)</li>
-
-                            <li>you’re expecting to adopt a child in the next 2
-                            months</li>
-
-                            <li>you’ve adopted a child within the last 12
-                            months</li>
-
-                            <li>you’re homeless</li>
-                        </ul>
-
-                        <p>If you're not sure whether or not you can apply,
-                        contact the Universal Credit helpline or visit your
-                        <a href="">local Citizens Advice</a>.</p>
-
-                        <p><strong>Universal Credit helpline</strong><br>
-                        Telephone: 0345 600 0723<br>
-                        Textphone: 0345 600 0743<br>
-                        Monday to Friday, 8am to 6pm</p>
-
-                        <p>Calls to this number can cost up to 9p a minute from
-                        a landline, or between 8p and 40p a minute from a
-                        mobile (your phone supplier can tell you how much
-                        you’ll pay). You can call and ask them to call you
-                        back.</p>
-
-                        <p>Your <a href="">nearest Citizens Advice</a> can also
-                        help.</p>
-
-                        <div class="dap-panel dap-panel--important">
-                            <p>If you can’t apply for Universal Credit, you
-                            should look at other benefits - use the Turn2us
-                            benefits checker to&nbsp;<a href="">see what you
-                            can apply for</a>.</p>
+                        <h2>C30</h2>
+                        <div class="callout--turquoise">
+                            <a href="c30.html" class="callout__link">Option 1</a>
+                            <a href="c30-option2.html" class="callout__link">Option 2</a>
                         </div>
-
-                        <h3 class="js-ref" id=
-                        "h-if-you-ve-applied-for-other-benefits">If you've
-                        applied for other benefits</h3>
-
-                        <p>You can’t get Universal Credit if you've applied for
-                        any of the following and you're waiting for a
-                        decision:</p>
-
-                        <ul>
-                            <li>Jobseeker’s Allowance</li>
-
-                            <li>Employment and Support Allowance</li>
-
-                            <li>Income Support</li>
-
-                            <li>Housing Benefit</li>
-
-                            <li>Child Tax Credit</li>
-
-                            <li>Working Tax Credit</li>
-                        </ul>
-
-                        <p>You can’t get Universal Credit if you’re appealing
-                        against a decision to not give you any of the
-                        following:</p>
-
-                        <ul>
-                            <li>Jobseeker’s Allowance</li>
-
-                            <li>Employment and Support Allowance</li>
-
-                            <li>Income Support (IS)</li>
-                        </ul>
-
-                        <p>You can’t get Universal Credit if you’re waiting for
-                        a revision of a decision to not give you any of the
-                        following:</p>
-
-                        <ul>
-                            <li>Jobseeker’s Allowance</li>
-
-                            <li>Employment and Support Allowance</li>
-
-                            <li>Income Support</li>
-
-                            <li>Housing Benefit</li>
-                        </ul>
-
-                        <p>You can’t get Universal Credit if you’re entitled
-                        to:</p>
-
-                        <ul>
-                            <li>Employment and Support Allowance</li>
-
-                            <li>Income Support</li>
-
-                            <li>Incapacity Benefit</li>
-
-                            <li>Severe Disablement Allowance</li>
-
-                            <li>Disability Living Allowance</li>
-
-                            <li>Personal Independence Payment</li>
-                        </ul>
-
-                        <p>You might be eligible for other benefits if you’re
-                        not eligible for Universal Credit. Use the Turn2us
-                        benefits checker to&nbsp;<a href="">see what you can
-                        apply for</a>, or contact your <a href="">nearest
-                        Citizens Advice</a>.</p>
-
-                        <div class="dap-panel dap-panel--progress">
-                            <h2 class="js-ref" id="h-next-steps">Next
-                            steps</h2>
-
-                            <p><a href="">Apply for Universal Credit</a>.</p>
-                        </div>-->
                     </div>
                 </div>
 
@@ -1576,7 +1300,7 @@
                 </form>
             </aside>
 
-            <nav class="side-nav" data-track-zone="side-nav" id=
+            <!--<nav class="side-nav" data-track-zone="side-nav" id=
             "beta-dap-menu-accordion">
                 <ul class="beta-dap-menu-accordion__sections">
                     <li class="beta-dap-menu-accordion__section has-sub -active -open">
@@ -1728,9 +1452,9 @@
                         </ul>
                     </li>
                 </ul>
-            </nav>
+            </nav>-->
 
-            <form action="" id="aspnetForm" method="post" name="aspnetForm">
+            <!--<form action="" id="aspnetForm" method="post" name="aspnetForm">
                 <div class="aspNetHidden">
                     <input id="__VIEWSTATE" name="__VIEWSTATE" type="hidden"
                     value=
@@ -1807,7 +1531,7 @@
                         <div id="RootPlaceHolder_ShareBar_plcPopup"></div>
                     </div>
                 </div>
-            </form>
+            </form>-->
         </div>
     </div>
 
