--- a/option3-5.html
+++ b/option3-5.html
@@ -8,39 +8,29 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
 
     <title>Citizens Advice > Consumer > Before you get building work done</title>
-    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0"
-    name="viewport">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
     <meta content="EWS" name="cab-extent">
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
+
     <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
-    <!-- Stylesheet for Option 3 -->
     <link href="css/option3.css" media="screen" rel="stylesheet">
-    <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media=
-    "print" rel="stylesheet">
-    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico"
-    rel="shortcut icon">
-    <link href=
-    "https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel=
-    "apple-touch-icon">
+    <link href="css/accordion.css" rel="stylesheet"><!-- Accordion styles -->
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
+
+    <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
+    <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
     <meta content="" name="keywords">
-    <meta content="" name="description">
-    <!-- Jquery for accordion script -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <!-- Accordion script -->
-    <script src="js/beta-dap-accordion.js"></script>
-    <!-- Sticky JS call -->
-    <script>
-        $(window).load(function(){
-            var height = $('#footer').height();
-            $(".sticker").sticky({ topSpacing: 20, bottomSpacing: height + 80 });
-            $(".js-make-sticky").sticky({ topSpacing: 20, bottomSpacing: height + 20 });
-        });
-    </script>
+    <meta content="" name="description"><!-- Revealables -->
+
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
+    <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
+    <script src="js/accordion.js"></script><!-- Accordion JS -->
 </head>
 
 <body class="beta">
@@ -188,8 +178,7 @@
                         </li>
                     </ul>
                 </div>
-                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a href="">Consumer</a></span>
-                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a>Before you get work done on your home</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a href="index.html">Testing</a></span> <i class="icon-guillemet-right"></i> <a href="option3.html">Option 3</a></span> <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a>Step 5</a></span>
             </div>
         </nav>
 
