--- a/option3.html
+++ b/option3.html
@@ -178,8 +178,7 @@
                         </li>
                     </ul>
                 </div>
-                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a href="">Consumer</a></span>
-                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a>Before you get work done on your home</a></span>
+                <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a href="index.html">Testing</a></span> <span class="breadcrumb__item"><i class="icon-guillemet-right"></i> <a>C22 Option 3</a></span>
             </div>
         </nav>
 
