Add links above and below content
If a user lands part way through content make this more visible to the
user.

--- a/option3-1.html
+++ b/option3-1.html
@@ -237,6 +237,22 @@
 
 
                     </div>
+
+
+                    <div class="steps">
+                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
+                                <strong>Find good builders or contractors</strong></a>
+                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
+                                <strong>Get quotes before you decide who to use</strong></a>
+                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
+                            <strong>Check there’s insurance in place</strong></a>
+                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
+                            <strong>Get a written contract</strong></a>
+                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
+                            <strong>Be prepared to deal with problems</strong></a>
+                    </div>
+
+
                 </div>
 
                 <!-- END MAIN CONTENT -->
