--- a/option3-4.html
+++ b/option3-4.html
@@ -201,6 +201,14 @@
                     "title__title">Before you get work done on your home</span></h1>
                 </div>
                 <div class="articleContent">
+                    <div class="steps">
+                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
+                            <strong>Check if you need permission or approval</strong></a>
+                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
+                                <strong>Find good builders or contractors</strong></a>
+                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
+                                <strong>Get quotes before you decide who to use</strong></a>
+                    </div>
                     <div>
 
                             <h2>Step 4: Check there’s insurance in place</h2>
@@ -236,6 +244,12 @@
                             <div class="callout">
                                 <p>If you don’t have home and contents insurance, it’s worth getting some before the work starts - there’s a bigger risk your home will be damaged or your things stolen while work’s going on.</p>
                             </div>
+                    </div>
+                    <div class="steps">
+                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
+                            <strong>Get a written contract</strong></a>
+                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
+                            <strong>Be prepared to deal with problems</strong></a>
                     </div>
                 </div>
 
