--- a/option3-5.html
+++ b/option3-5.html
@@ -201,6 +201,16 @@
                     "title__title">Before you get work done on your home</span></h1>
                 </div>
                 <div class="articleContent">
+                    <div class="steps">
+                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
+                            <strong>Check if you need permission or approval</strong></a>
+                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
+                                <strong>Find good builders or contractors</strong></a>
+                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
+                                <strong>Get quotes before you decide who to use</strong></a>
+                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
+                            <strong>Check there’s insurance in place</strong></a>
+                    </div>
                     <div>
 
                             <h2>Step 5: Get a written contract</h2>
@@ -326,6 +336,10 @@
 
                                 <p>Contact the Citizens Advice consumer helpline if you need more help - a trained adviser can give you advice over the phone or by email.</p>
                             </div>
+                    </div>
+                    <div class="steps">
+                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
+                            <strong>Be prepared to deal with problems</strong></a>
                     </div>
                 </div>
 
