--- a/option3-6.html
+++ b/option3-6.html
@@ -201,6 +201,18 @@
                     "title__title">Before you get work done on your home</span></h1>
                 </div>
                 <div class="articleContent">
+                    <div class="steps">
+                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
+                            <strong>Check if you need permission or approval</strong></a>
+                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
+                                <strong>Find good builders or contractors</strong></a>
+                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
+                                <strong>Get quotes before you decide who to use</strong></a>
+                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
+                            <strong>Check there’s insurance in place</strong></a>
+                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
+                            <strong>Get a written contract</strong></a>
+                    </div>
                     <div>
 
                             <h2>Step 6: Be prepared to deal with problems</h2>
