--- a/option3-2.html
+++ b/option3-2.html
@@ -201,6 +201,12 @@
                     "title__title">Before you get work done on your home</span></h1>
                 </div>
                 <div class="articleContent">
+
+                    <div class="steps">
+                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
+                            <strong>Check if you need permission or approval</strong></a>
+                    </div>
+
                     <div>
 
                             <h2>Step 2: Find good builders or contractors</h2>
@@ -286,6 +292,19 @@
                             <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p>
 
                     </div>
+
+                    <div class="steps">
+                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
+                                <strong>Get quotes before you decide who to use</strong></a>
+                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
+                            <strong>Check there’s insurance in place</strong></a>
+                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
+                            <strong>Get a written contract</strong></a>
+                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
+                            <strong>Be prepared to deal with problems</strong></a>
+                    </div>
+
+
                 </div>
 
                 <!-- END MAIN CONTENT -->
