Option 2 mobile functionality

--- a/option2.html
+++ b/option2.html
@@ -28,6 +28,7 @@
     <meta content="" name="description"><!-- Revealables -->
 
     <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/beta-dap-accordion.js"></script>
     <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
     <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
     <script src="js/accordion.js"></script><!-- Accordion JS -->
@@ -637,17 +638,74 @@
                             </li>
                         </ul>
                     </li>
+                </ul>
 
-                    <li class="beta-dap-menu-accordion__section has-sub">
-                        <a class="beta-dap-menu-accordion__link">Home installation not done properly</a>
+                <ul class="o2fixed">
+                    <li class="o2fixed__link">
+                        <span class="#step1"><strong>Step 1:</strong> Check if you need permission or approval</span>
+                    </li>
+
+                    <li class="o2fixed__link">
+                        <span class="#step2"><strong>Step 2:</strong> Find good builders or contractors</span>
+                    </li>
+
+                    <li class="o2fixed__link">
+                        <span class="#step3"><strong>Step 3:</strong> Get quotes before you decide who to use</span>
+                    </li>
+
+                    <li class="o2fixed__link">
+                        <span class="#step4"><strong>Step 4:</strong> Check there’s insurance in place</span>
+                    </li>
+
+                    <li class="o2fixed__link">
+                        <span class="#step5"><strong>Step 5:</strong> Get a written contract</span>
+                    </li>
+
+                    <li class="o2fixed__link">
+                        <span class="#step6"><strong>Step 6:</strong> Be prepared to deal with problems</span>
+                    </li>
+                </ul>
+
+                <ul class="o2mobile">
+                    <li class="o2mobile__link close">
+                        <a class="">Close</a>
+                    </li>
+                    <li class="beta-dap-menu-accordion__section has-sub -active -open">
+                        <a class="beta-dap-menu-accordion__link">Builders and home improvements</a>
 
                         <ul class="beta-dap-menu-accordion__pages">
-                            <li class="beta-dap-menu-accordion__page">
-                                <a class="beta-dap-menu-accordion__link" href="">Lorem ipsum</a>
+                            <li class="beta-dap-menu-accordion__page -current">
+                                <a class="beta-dap-menu-accordion__link" href="">Before you get work done on your home</a>
+
+                                <ul class="o2mobile--sub">
+                                    <li class="o2mobile__link">
+                                        <a class="" href="#step1"><strong>Step 1:</strong> Check if you need permission or approval</a>
+                                    </li>
+
+                                    <li class="o2mobile__link">
+                                        <a class="" href="#step2"><strong>Step 2:</strong> Find good builders or contractors</a>
+                                    </li>
+
+                                    <li class="o2mobile__link">
+                                        <a class="" href="#step3"><strong>Step 3:</strong> Get quotes before you decide who to use</a>
+                                    </li>
+
+                                    <li class="o2mobile__link">
+                                        <a class="" href="#step4"><strong>Step 4:</strong> Check there’s insurance in place</a>
+                                    </li>
+
+                                    <li class="o2mobile__link">
+                                        <a class="" href="#step5"><strong>Step 5:</strong> Get a written contract</a>
+                                    </li>
+
+                                    <li class="o2mobile__link">
+                                        <a class="" href="#step6"><strong>Step 6:</strong> Be prepared to deal with problems</a>
+                                    </li>
+                                </ul>
                             </li>
 
                             <li class="beta-dap-menu-accordion__page">
-                                <a class="beta-dap-menu-accordion__link" href="">Lorem ipsum</a>
+                                <a class="beta-dap-menu-accordion__link" href="">Problems with home improvements</a>
                             </li>
                         </ul>
                     </li>
