--- a/c30-option2.html
+++ b/c30-option2.html
@@ -30,7 +30,7 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
     <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
-    <script src="js/accordion.js"></script><!-- Accordion JS -->
+    <script src="js/collapse.js"></script><!-- Accordion JS -->
 </head>
 
 <body class="beta">
@@ -185,9 +185,9 @@
                             <p>It’s a good idea to keep a record and receipts of any extra money you have to pay for travel while you’re disputing a bill. You might need to prove this down the line.</p>
                         </div>
 
-                        <div id="accordion" class="callout">
-                            <div class="accordion-toggle callout__link callout__link--anchor">If the problem wasn’t fixed or something else is broken</div>
-                            <div id="step1" class="accordion-content">
+                        <div id="collapse">
+                            <div class="collapse-toggle">If the problem wasn’t fixed or something else is broken</div>
+                            <div id="step1" class="collapse-content">
 
                                 <p>You should ask the garage to fix any faults that:</p>
 
@@ -231,12 +231,12 @@
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="callout__link accordion-toggle-close">Close</a>
+                                <a class="collapse-toggle-close">Close</a>
 
                             </div>
 
-                            <a class="accordion-toggle callout__link callout__link--anchor">If you think you’re being overcharged</a>
-                            <div id="step2" class="accordion-content">
+                            <div class="collapse-toggle">If you think you’re being overcharged</div>
+                            <div id="step2" class="collapse-content">
 
                                 <h3>If you agreed a price before the work was done</h3>
 
@@ -276,11 +276,11 @@
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="callout__link accordion-toggle-close">Close</a>
+                                <a class="collapse-toggle-close">Close</a>
                             </div>
 
-                            <a class="accordion-toggle callout__link callout__link--anchor">If the garage did work you didn’t ask for</a>
-                            <div id="step3" class="accordion-content">
+                            <div class="collapse-toggle">If the garage did work you didn’t ask for</div>
+                            <div id="step3" class="collapse-content">
 
                                 <p>If you told the garage to do whatever needs to be done to fix the car, then you gave them the right to decide what work to do. You’ll have to pay if the work was necessary and the price is reasonable. Get a second opinion if you think the price isn’t reasonable.</p>
 
@@ -296,11 +296,11 @@
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="callout__link accordion-toggle-close">Close</a>
+                                <a class="collapse-toggle-close">Close</a>
                             </div>
 
-                            <a class="accordion-toggle callout__link callout__link--anchor">If the repair is taking too long</a>
-                            <div id="step4" class="accordion-content">
+                            <div class="collapse-toggle">If the repair is taking too long</div>
+                            <div id="step4" class="collapse-content">
 
                                 <p>You can ask the garage for a courtesy car (this is a car that the garage will give you to use - not all garages will offer this). Keep a record of everything extra you spend on travel - you might need to prove this later on.</p>
 
@@ -334,7 +334,7 @@
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
-                                <a class="callout__link accordion-toggle-close">Close</a>
+                                <a class="collapse-toggle-close">Close</a>
                             </div>
                         </div>
 
