--- a/option2.html
+++ b/option2.html
@@ -31,7 +31,7 @@
     <script src="js/beta-dap-accordion.js"></script>
     <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
     <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
-    <script src="js/accordion.js"></script><!-- Accordion JS -->
+    <script src="js/collapse.js"></script><!-- Accordion JS -->
 </head>
 
 <body class="beta">
