--- a/option3-5.html
+++ b/option3-5.html
@@ -28,9 +28,10 @@
     <meta content="" name="description"><!-- Revealables -->
 
     <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/beta-dap-accordion.js"></script>
     <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
     <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
-    <script src="js/accordion.js"></script><!-- Accordion JS -->
+    <script src="js/collapse.js"></script><!-- Accordion JS -->
 </head>
 
 <body class="beta">
