--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,7 @@
                         <div class="callout--turquoise">
                             <a href="c30.html" class="callout__link">Option 1</a>
                             <a href="c30-option2.html" class="callout__link">Option 2</a>
+                            <a href="c17.html" class="callout__link">Option 2 (C17)</a>
                         </div>
                     </div>
                 </div>
