--- a/c30-option2.html
+++ b/c30-option2.html
@@ -13,21 +13,18 @@
     <meta content="EWS" name="cab-extent">
     <meta content="/static/images/apple-touch-icon.png">
     <meta content="B53C5C20449FC2233D3862B4DBEDFA3E" name="msvalidate.01">
-
     <link href="css/main.css" media="screen" rel="stylesheet">
     <link href="css/site.css" media="screen" rel="stylesheet">
     <link href="css/option2.css" media="screen" rel="stylesheet">
-    <link href="css/accordion.css" rel="stylesheet"><!-- Accordion styles -->
-
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://www.citizensadvice.org.uk/static/css/print.css" media="print" rel="stylesheet">
-
     <link href="https://www.citizensadvice.org.uk/static/layout/favicon.ico" rel="shortcut icon">
     <link href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png" rel="apple-touch-icon">
     <meta content="" name="keywords">
     <meta content="" name="description"><!-- Revealables -->
 
     <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/beta-dap-accordion.js"></script>
     <script src="js/sticky-nav.js"></script><!-- Sticky Navigation JS -->
     <script src="js/nav-active.js"></script><!-- Navigation Updating JS -->
     <script src="js/collapse.js"></script><!-- Accordion JS -->
@@ -174,6 +171,7 @@
                 </div>
 
                 <div class="articleContent">
+
                     <div>
                         <p>If you’ve had a problem with repairs to your car, the best thing to do is negotiate with the garage to work out the best solution.</p>
 
@@ -185,10 +183,14 @@
                             <p>It’s a good idea to keep a record and receipts of any extra money you have to pay for travel while you’re disputing a bill. You might need to prove this down the line.</p>
                         </div>
 
-                        <div id="collapse">
-                            <div class="collapse-toggle">If the problem wasn’t fixed or something else is broken</div>
-                            <div id="step1" class="collapse-content">
 
+
+                        <div id="collapse" class="collapse"><!-- Collapse group start -->
+
+                            <div class="collapse-toggle"><!--Step 1-->
+                                <strong>If the problem wasn’t fixed or something else is broken</strong>
+                            </div>
+                            <div class="collapse-content" id="step1">
                                 <p>You should ask the garage to fix any faults that:</p>
 
                                 <ul>
@@ -230,15 +232,15 @@
 
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
-
                                 <a class="collapse-toggle-close">Close</a>
-
                             </div>
 
-                            <div class="collapse-toggle">If you think you’re being overcharged</div>
-                            <div id="step2" class="collapse-content">
 
-                                <h3>If you agreed a price before the work was done</h3>
+                            <div class="collapse-toggle"><!--Step 2-->
+                                <strong>If you think you’re being overcharged</strong>
+                            </div>
+                            <div class="collapse-content" id="step2">
+                            <h3>If you agreed a price before the work was done</h3>
 
                                 <p>If you agreed on an amount (or got a quote) before the garage did the work, you’ll have to pay the full bill. This is because you’ve entered into a contract with the garage (even if you didn’t sign anything). You can ask for them to come down on the price, but they don’t have to.</p>
 
@@ -276,12 +278,15 @@
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
 
+
                                 <a class="collapse-toggle-close">Close</a>
                             </div>
 
-                            <div class="collapse-toggle">If the garage did work you didn’t ask for</div>
-                            <div id="step3" class="collapse-content">
 
+                            <div class="collapse-toggle"><!--Step 3-->
+                                <strong>If the garage did work you didn’t ask for</strong>
+                            </div>
+                            <div class="collapse-content" id="step3">
                                 <p>If you told the garage to do whatever needs to be done to fix the car, then you gave them the right to decide what work to do. You’ll have to pay if the work was necessary and the price is reasonable. Get a second opinion if you think the price isn’t reasonable.</p>
 
                                 <p>If you only asked the garage to do a specific piece of work and they did extra work that you didn’t ask for, you can ask them to undo the work. If this isn't possible, you should insist you only pay for the work that was agreed.</p>
@@ -299,9 +304,11 @@
                                 <a class="collapse-toggle-close">Close</a>
                             </div>
 
-                            <div class="collapse-toggle">If the repair is taking too long</div>
-                            <div id="step4" class="collapse-content">
 
+                            <div class="collapse-toggle"><!--Step 4-->
+                                <strong>If the repair is taking too long</strong>
+                            </div>
+                            <div class="collapse-content" id="step4">
                                 <p>You can ask the garage for a courtesy car (this is a car that the garage will give you to use - not all garages will offer this). Keep a record of everything extra you spend on travel - you might need to prove this later on.</p>
 
                                 <p>If the car is having body work done and parts are delayed, you could ask to take your car and continue to use it until the parts have arrived.</p>
@@ -333,9 +340,17 @@
 
                                 <div class="callout--turquoise"><a class="callout__link callout__link--anchor" href="#next-steps">Take further action if your negotiations have failed</a>
                                 </div>
-
                                 <a class="collapse-toggle-close">Close</a>
                             </div>
+
+                        </div><!-- Collapse group end -->
+
+
+
+                        <div id="collapse">
+
+                            </div>
+
                         </div>
 
                         <section id="next-steps">
